/**
 * Trigger Tests for azure-prepare
 * 
 * Tests that verify the skill triggers on appropriate prompts
 * and does NOT trigger on unrelated prompts.
 * 
 * Uses snapshot testing + parameterized tests for comprehensive coverage.
 */

import { TriggerMatcher } from "../utils/trigger-matcher";
import { loadSkill, LoadedSkill } from "../utils/skill-loader";

const SKILL_NAME = "azure-prepare";

describe(`${SKILL_NAME} - Trigger Tests`, () => {
  let triggerMatcher: TriggerMatcher;
  let skill: LoadedSkill;

  beforeAll(async () => {
    skill = await loadSkill(SKILL_NAME);
    triggerMatcher = new TriggerMatcher(skill);
  });

  describe("Should Trigger", () => {
    // Prompts that SHOULD trigger this skill - must have Azure intent
    const shouldTriggerPrompts: string[] = [
      "Create a dad joke generator and deploy to Azure",
      "Build a web app and host it on Azure",
      "I want to deploy my application to Azure",
      "Set up Azure infrastructure for my project",
      "Prepare my app for Azure deployment",
      "Create an API and run it on Azure",
      "Migrate my application to Azure",
      "Configure Azure hosting for my app",
      "Create a serverless HTTP API using Azure Functions and deploy to Azure",
      "Create an event-driven function app to process messages and deploy to Azure Functions",
      "Create an Azure Functions app with a timer trigger",
      // Functional verification before deployment
      "Build my web app for Azure and test it locally before deploying",
      "Prepare my app for Azure and verify it works before deployment",
    ];

    test.each(shouldTriggerPrompts)(
      'triggers on: "%s"',
      (prompt) => {
        const result = triggerMatcher.shouldTrigger(prompt);
        expect(result.triggered).toBe(true);
      }
    );
  });

  describe("Should NOT Trigger", () => {
    // Prompts that should NOT trigger - no Azure intent or other skills
    const shouldNotTriggerPrompts: string[] = [
      "What is the weather today?",
      "Help me write a poem",
      "Explain quantum computing",
      "What is the capital of France?",
      "Calculate the fibonacci sequence",
      "Parse this JSON file",
      "Run azd up to deploy my app",
      "Run azd deploy now",
      "Execute azd up command",
      "Begin the ship",
      "Validate the configuration files",
    ];

    test.each(shouldNotTriggerPrompts)(
      'does not trigger on: "%s"',
      (prompt) => {
        const result = triggerMatcher.shouldTrigger(prompt);
        expect(result.triggered).toBe(false);
      }
    );
  });

  describe("Trigger Keywords Snapshot", () => {
    test("skill keywords match snapshot", () => {
      expect(triggerMatcher.getKeywords()).toMatchSnapshot();
    });

    test("skill description triggers match snapshot", () => {
      expect({
        name: skill.metadata.name,
        description: skill.metadata.description,
        extractedKeywords: triggerMatcher.getKeywords()
      }).toMatchSnapshot();
    });
  });

  describe("Edge Cases", () => {
    test("handles empty prompt", () => {
      const result = triggerMatcher.shouldTrigger("");
      expect(result.triggered).toBe(false);
    });

    test("handles very long prompt", () => {
      const longPrompt = "Azure prepare ".repeat(1000);
      const result = triggerMatcher.shouldTrigger(longPrompt);
      expect(typeof result.triggered).toBe("boolean");
    });

    test("is case insensitive", () => {
      const lower = triggerMatcher.shouldTrigger("create new azure application");
      const upper = triggerMatcher.shouldTrigger("CREATE NEW AZURE APPLICATION");
      expect(lower.triggered).toBe(upper.triggered);
    });
  });
});
