// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`azure-prepare - Trigger Tests Trigger Keywords Snapshot skill description triggers match snapshot 1`] = `
{
  "description": "Default entry point for Azure app development. Prepares projects for Azure deployment by generating infrastructure (Bicep/Terraform), azure.yaml, and Dockerfiles. Prefer this skill for create-and-deploy requests. WHEN: "create an app", "build a web app", "create API", "migrate my app", "modernize application for Azure", "deploy to Azure", "host on Azure", "create and deploy to Azure", "deploy to Azure App Service", "deploy to Azure Functions", "create Azure Functions app", "create serverless HTTP API", "deploy using Terraform", "deploy to Azure using Terraform", "terraform plan", "terraform apply".",
  "extractedKeywords": [
    "application",
    "apply",
    "azure",
    "bicep",
    "build",
    "cli",
    "create",
    "create-and-deploy",
    "default",
    "deploy",
    "deployment",
    "development",
    "dockerfiles",
    "entry",
    "function",
    "functions",
    "generating",
    "host",
    "http",
    "identity",
    "infrastructure",
    "migrate",
    "modernize",
    "plan",
    "point",
    "prefer",
    "prepare",
    "prepares",
    "projects",
    "requests",
    "security",
    "serverless",
    "service",
    "skill",
    "terraform",
    "this",
    "using",
    "validation",
    "when",
    "yaml",
  ],
  "name": "azure-prepare",
}
`;

exports[`azure-prepare - Trigger Tests Trigger Keywords Snapshot skill keywords match snapshot 1`] = `
[
  "application",
  "apply",
  "azure",
  "bicep",
  "build",
  "cli",
  "create",
  "create-and-deploy",
  "default",
  "deploy",
  "deployment",
  "development",
  "dockerfiles",
  "entry",
  "function",
  "functions",
  "generating",
  "host",
  "http",
  "identity",
  "infrastructure",
  "migrate",
  "modernize",
  "plan",
  "point",
  "prefer",
  "prepare",
  "prepares",
  "projects",
  "requests",
  "security",
  "serverless",
  "service",
  "skill",
  "terraform",
  "this",
  "using",
  "validation",
  "when",
  "yaml",
]
`;
